<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="95dp"
            app:srcCompat="@drawable/kat_icon" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="20dp"
            android:layout_below="@id/imageView4"
            android:hint="@string/kategori_k"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText8"
            android:padding="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@color/blue1"
                android:text="@string/kategori_iptal" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:background="@color/blue1"
                android:layout_weight="1"
                android:text="@string/kategori_onay" />
        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>