<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp">

    <RelativeLayout
        android:id="@+id/item_relative"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/imageView9"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="center"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_above="@+id/relativeLayoutLike"
            android:layout_alignParentStart="true"
            android:background="#60000000" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/imageView9"
            android:text="@string/isimisim"
            android:textColor="@color/editTextClick" />

        <TextView
            android:id="@+id/textView_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textView15"
            android:layout_alignBaseline="@id/textView15"
            android:paddingStart="5dp"
            android:text="@string/soyisim"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/editTextClick" />
        <TextView
            android:id="@+id/textView_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/textView17"
            android:layout_toEndOf="@id/imageView9"
            android:layout_below="@id/textView15"
            android:layout_marginStart="10dp"
            android:text="@string/sehir" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textView_city"
            android:layout_below="@id/textView17"
            android:layout_alignBaseline="@id/textView_city"
            android:text="/" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textView31"
            android:layout_below="@+id/textView15"
            android:layout_alignBaseline="@id/textView31"
            android:layout_marginTop="2dp"
            android:text="@string/ulke" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView15"
            android:layout_alignBottom="@+id/textView15"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="@string/tarih" />

        <TextView
            android:id="@+id/textView_location"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView19"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/icerik_konum" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView8"
            android:orientation="horizontal"
            android:id="@+id/relativeLayoutLike">

            <Button
                android:id="@+id/button15"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/like"
                android:text="" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/button15"
                android:layout_alignBottom="@+id/button15"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/button15"
                android:text="0" />

            <Button
                android:id="@+id/button34"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_toEndOf="@id/textView32"
                android:background="@drawable/comment"/>
            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView32"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/button34"
                android:text="0" />

            <Button
                android:id="@+id/button16"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_toEndOf="@id/textView33"
                android:layout_marginTop="2dp"
                android:layout_marginStart="40dp"
                android:background="@drawable/share_icon2"
                android:visibility="gone"
                android:text="" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginTop="9dp"
                android:layout_marginStart="80dp"
                android:layout_toEndOf="@id/textView33"
                card_view:srcCompat="@drawable/tag" />

            <TextView
                android:id="@+id/textViewkat"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageView12"
                android:layout_alignBaseline="@id/textView32"
                android:layout_marginStart="5dp"
                android:maxLines="1"
                android:singleLine="true"
                android:text="" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_above="@+id/relativeLayoutLike"
            android:layout_alignParentStart="true"
            android:paddingLeft="10dp"
            android:paddingBottom="12dp"
            android:text="@string/baslik"
            android:textColor="@color/white" />

    </RelativeLayout>

</android.support.v7.widget.CardView>